<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item android:title="@string/becasTitleMenu">
            <menu>
                <item
                    android:id="@+id/nav_buscarBecas"
                    android:icon="?android:attr/actionModeWebSearchDrawable"
                    android:title="@string/buscar_becasTitleMenu" />
                <item
                    android:id="@+id/nav_becasSugeridas"
                    android:icon="?android:attr/actionModeFindDrawable"
                    android:title="@string/becas_sugeridasTitleMenu" />

            </menu>
        </item>
        <item android:title="@string/suscripcionesTitleMenu">
            <menu>
                <item
                    android:id="@+id/nav_misBecas"
                    android:icon="@drawable/ic_star_border_black_24dp"
                    android:title="@string/becas_de_interesTitleMenu" />

            </menu>
        </item>
        <item android:title="@string/datos_personalesTitleMenu">
            <menu>
                <item
                    android:id="@+id/nav_editarDatos"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/editar_mis_datosTitleMenu" />
                <item
                    android:id="@+id/nav_historialNotificaciones"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/notificacionesTitleMenu" />

                <item
                    android:id="@+id/nav_verPerfil"
                    android:icon="?android:attr/fingerprintAuthDrawable"
                    android:title="@string/ver_perfilTitleMenu" />

            </menu>
        </item>
        <item android:title="@string/acerca_deTitleMenu">
            <menu>
                <item
                    android:id="@+id/nav_contacto"
                    android:icon="@android:drawable/ic_menu_call"
                    android:title="@string/contactoTitleMenu" />
                <item
                    android:id="@+id/nav_reglamento"
                    android:icon="?android:attr/actionModeCopyDrawable"
                    android:title="@string/reglamentoTitleMenu" />

            </menu>
        </item>

    </group>



</menu>
