<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/InfoPersonalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informacion_personalTitleRegistro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nombreLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nombreRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreTextRegistro" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/apellidoLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/apellidoRegister"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:hint="@string/apellidoTextRegistro" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/NacimientoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_nacimientoTextRegistro"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/NacimientoLayout"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lugarLayout"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/paisText"
                        android:layout_width="166dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/paisTextRegistro" />

                    <Spinner
                        android:id="@+id/paisRegister"
                        android:layout_width="275dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/provinciaText"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/provinciaTextRegistro" />

                    <Spinner
                        android:id="@+id/provinciaRegister"
                        android:layout_width="275dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ciudadText"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/ciudadTextRegistro" />

                    <Spinner
                        android:id="@+id/ciudadRegister"
                        android:layout_width="275dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/direccionLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/direccionRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccionTextRegistro" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/infoCuentaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoCuentaTitleRegistro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailTextRegistro"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasenaTextRegistro"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordNewLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordNewEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contraseña Nueva"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordValLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordValRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirme_contrasenaTextRegistro"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:minLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/infoInteresText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoInteresTitleRegistro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tipoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_de_estudianteTextRegistro" />

                <Spinner
                    android:id="@+id/tipoRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/orientacionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orientacion_de_estudiosTextRegistro" />

                <Spinner
                    android:id="@+id/orientacionRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/btnConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnConfirmar" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
