<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="7dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/desarrollado_porTextContacto"
            android:textColor="#000"
            android:textSize="10pt" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:gravity="center"
            android:src="@drawable/logo_ingenio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/contactanos_aTextContacto"
            android:textColor="#000"
            android:textSize="10pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:gravity="center"
            android:text="@string/mailTextContacto"
            android:textColorLink="#047CAA"
            android:textSize="10pt" />

    </LinearLayout>
</LinearLayout>